# FreeCAD-Offset

./: README.md  package.xml  pyproject.toml
freecad/OffsetToolWB/: __init__.py  commands.py  controller.py  core.py  init_gui.py
verify/: headless_regression.py  out-headless.txt
verify/drivers/: offset_driver.py
